# rock-paper-scissors

server/: Cargo.toml  README.md
server/src/: main.rs  rock_paper_scissors.rs  server.rs
server/src/server/: tests.rs
wfe/: nuxt.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
wfe/app/: app.vue
wfe/app/assets/css/: main.css
wfe/app/components/: AppLogo.vue  Paper.vue  Rock.vue  Scissors.vue
wfe/app/composables/: useGameAudio.ts  useRockPaperScissors.ts
wfe/app/pages/: game.vue  index.vue
