[package]
name = "rust-sockets"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
futures-util = "0.3.31"
log = "0.4.29"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
